# mediax_project

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
camera_calibration/: logitech_c310.yml  logitech_c310_800.yml  logitech_flea3.yml  logitech_flea3_half.yml  pointgrey_flea3_half.yml
include/HRI_planner/: human_localization.h  inside_out_tracker.h
include/hri_planner/: exp_main_window.h  gl_tracking_display.h  haptic_usb.h  imu_manager.h  inside_out_tracker.h  serial_manager.h
include/mediax_project/: exp_main_window.h  inside_out_tracker.h
launch/: astar_planner_sim.launch  exp_control.launch  exp_control_test.launch  exp_human.launch  exp_robot.launch  haptics_node_test.launch  human_tracker_test.launch  mapping_sim.launch  robot_tracker_test.launch  tracker_nodelet.launch  tracker_nodelet_hs.launch  tracker_test.launch  usb_cam-test.launch
launch/calibration/: camera_calibration.launch  robot_tracker_calibration.launch  tracker_calibration.launch
launch/simulation/: astar_planner_sim.launch  mapping_sim.launch
launch/tests/: camera.launch  haptics_node_test.launch  human_tracker_test.launch  robot_supervisor_test.launch  robot_tracker_test.launch  tracker_nodelet.launch  tracker_nodelet_hs.launch
maps/marker_maps/: atrium.json  board_test.json  exp_test.json  lab_test.json
models/corridor_simple/: model.sdf
params/: human_tracker.json  inside_out_tracker.json  robot_tracker.json
protocols/: exp1-1.json  exp1.json
scripts/: fake_pose_publisher.py  intrinsic_calibration.py  robot_supervisor.py  tracker_visualization2d.py
scripts/utilities/: protocol_generator.py  test.json
src/: exp_control.cpp  exp_main_window.cpp  gl_tracking_display.cpp  haptic_usb.cpp  human_localization.cpp  imu_manager.cpp  inside_out_tracker.cpp  serial_manager.cpp
src/nodelets/: tracker_nodelet.cpp
src/nodes/: haptic_node.cpp  imu_manager_node.cpp  opt_flow_bridge.cpp  tracker_calibration.cpp
ui/: exp_main_window.ui
world/: corridor_simple.world
